new button reset

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Jogo da Memória</h1>
-
+    <div class="reset">Resetar</div>
     <section class="cards">
         <div class="card">
             <div></div>
